[package]
name = "atari2600_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.10"
lazy_static = "1.3.0"
image = "0.24.7"
modular-bitfield = "0.11.2"
sdl2 = { version = "0.36", optional = true }

[[example]]
name = "sdl"
required-features = ["sdl2"]

[profile.release]
opt-level = 3
# lto = true

[profile.release-with-debug]
inherits = "release"
debug = true
