[package]
name = "atari2600_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.8"
lazy_static = "1.3.0"
image = "0.24.7"
modular-bitfield = "0.11.2"
atari2600-audio = { path = "../atari2600-audio" }
sdl2 = { version = "0.36", optional = true }
env_logger = { version = "0.10", optional = true }

[features]
default = ["sdl2"]
sdl2 = ["dep:sdl2", "atari2600-audio/sdl2_audio", "env_logger"]

[[example]]
name = "sdl"
required-features = ["sdl2"]

[profile.release]
opt-level = 3
# lto = true

[profile.release-with-debug]
inherits = "release"
debug = true
